--- a/src/pages/home/page.ejs
+++ b/src/pages/home/page.ejs
@@ -2,14 +2,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= incloud("ejs!../../layout/meta.ejs")() %>
+		<%- include ../../layout/meta.ejs -%>
     <title>耶塔(Yeta)电话营销机器人_人工智能电销系统_AI外呼机器人</title>
 		<link rel="stylesheet" type="text/css" href="http://agent.kxjlcc.com/kcdn/swiper-4.4.1/css/swiper.min.css" />
 		<script src="./index.js"></script>
   </head>
   <body>
-   	<%= require("ejs-loader!./header.ejs")() %>
-   	<%= require("./header.ejs")() %>
+		<%- include ./header.ejs -%>
    	<div class="swiper-container">
 	    <div class="swiper-wrapper">
 	        <div class="swiper-slide">
